--- a/proyecto/main/style.css
+++ b/proyecto/main/style.css
@@ -9,33 +9,45 @@ html{
     font-family: 'Nunito', sans-serif;
 }
 header {
-    width: 100%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 90px;
     background-image: linear-gradient(315deg, #42378f 0%, #f53844 74%);
+    position: relative;
 }
 .pokemon-logo {
-    width: 160px;
-    height: 90px;
+    max-width: 165px;
+    min-width: 100px;
+    width: 15%;
+    height: auto;
     margin-left: 36px;
 }
 .profile-img{
-    width: 50px;
-    height: 50px;
+    min-width: 40px;
+    max-width: 50px;
+    width: 10%;
+    height: auto;
     border-radius: 100%;
     margin-right: 36px;
     background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
 }
 .header-input{
-    width: 30%;
-    margin: auto;
+    min-width: 100px;
+    max-width: 350px;
+    width: 70%;
+    margin: auto 10px;
 }
 .header-input input{
-    width: 81%; 
+    max-width: 340px;
+    min-width: 65px;
+    width: 85%; 
     height: 40px;
     border: none;
     outline: none;
+    border-radius: 150px;
+
 }
 .main-input-container{
     width: 100%;
@@ -73,10 +85,12 @@ main{
     flex-direction: column;
     align-items: center;
     text-align: left;
-    width: 260px;
-    height: 330px;
+    max-width: 260px;
+    min-width: 100px;
+    width: 90%;
+    height: 330px; 
     border-radius: 20px;
-    margin: 30px 30px 30px 30px;
+    margin: 15px 15px 15px 15px;
     background: linear-gradient(to right, rgb(255, 128, 8), rgb(255, 200, 55));  
 }
 
@@ -167,7 +181,7 @@ main{
     display: block;
 }
  .img-target_MODAL{
-    width: 50%; /*50%*/
+    width: 50%; 
     height: auto;
     margin: 0 auto;
 } 
@@ -187,4 +201,28 @@ main{
     font-weight: 500;
 }
 
-
+@media (max-width: 480px) {
+    header{
+        flex-direction: column;
+        height: 120px;
+    }
+    .pokemon-logo{
+        margin-left: 0;
+        position: absolute;
+        left: 5px;
+        top: 5px;
+    }
+    .profile-img{
+        margin-right: 0;
+        position: absolute;
+        top: 5px;
+        right: 10px;
+    }
+    .header-input {
+        position: absolute;
+        top: 67px;
+    }
+    .header-input input {
+        height: 35px;
+    } 
+}
