--- a/proyecto/main/style.css
+++ b/proyecto/main/style.css
@@ -135,7 +135,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 0, 0, 0.726);
+    background-color: #BB0B00;
     width: 25px;
     border-radius: 100%;
     height: 25px;
@@ -155,7 +155,6 @@ main{
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: white;
     max-width: 400px;
     min-width: 100px;
     width: 70%;
@@ -164,6 +163,7 @@ main{
     margin: auto;
     border-radius: 20px;
 }
+
 
 .pokeModalup {
     display: none; 
@@ -177,6 +177,9 @@ main{
     overflow: auto; 
     background-color: rgb(0,0,0); 
     background-color: rgba(0,0,0,0.6);
+}
+.pokeModalup::before{
+    background-color: white;
 }
 
 .img-target_MODAL{
