--- a/proyecto/Register/style_res.css
+++ b/proyecto/Register/style_res.css
@@ -15,6 +15,7 @@ main{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
     width: 100%;
     height: auto;
 }
@@ -139,18 +140,13 @@ main{
 .warnings{
     text-align: center;
     padding: 2% 0;
+    font-size: 1.5rem;
     margin: auto;
 }
 
 @media (max-width: 480px){
-    main{
-        flex-direction: column;
-    }
     .container-pokeForm{
         width: 93%;
         margin-bottom: 2%;
-    }
-    .warnings{
-        font-size: 1.5rem;
     }
 }
