--- a/proyecto/User Profile/style_user.css
+++ b/proyecto/User Profile/style_user.css
@@ -7,10 +7,11 @@
 html{
     font-size: 62.5%;
     background-color: #F1F1F1;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
-main{
+.container-form{
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -26,19 +27,29 @@ main{
     font-size: 2.3rem;
     font-weight: bold;
     margin: 20px auto;
+    color: #424A59;
 }
+
 
 .container--user_profile{
     width: 150px;
-    height: 130px;
+    height: 140px;
     border-radius: 12px;
     overflow: hidden;
-    border: 2px solid gray;
+    border: 2px solid #D9E0FE;
 }
+/* 
+.container--user_profile:hover{
+    border: 2px solid #8B11BF;
+    border: 1px solid #; 
+    box-shadow: 0 2px 6px rgba(152, 36, 202, 0.781);
+    transition: all 0.2s ease;
+} 
+*/
 
 .user_profile{
     width: 100%; 
-    background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
+    background-color: #DADFFD;
 }
 
 #get_reference{
@@ -46,7 +57,7 @@ main{
 }
 
 .button_profile{
-    background-image: url("../icons/5003017741537356029.svg");
+    background-image: url("../icons/profile_camera.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -57,7 +68,7 @@ main{
     margin-left: 147px;
 }
 
-/* contenedor de la informacion del usuario nickname, gmail, edad*/
+/*container of information of the user ( name, nickname, gmail, birthday )*/
 
 .container-information--acount{
     display: flex;
@@ -66,31 +77,63 @@ main{
     max-width: 400px;
     min-width: 226px;
     width: 90%;
-    margin-top: 10%;
+    margin: 10% 0;
 }
 
-.textprofile {
-    color: #012340;
+.text-title {
+    color:#424A59;
     font-size: 2rem;
     font-weight: 500;
-    letter-spacing: -1px;
     margin: 0 0 2% 5%;
 }
 
-.text-of-profile{
-    color: #023059;
-    font-size: 1.6rem;
-    font-weight: 700;
-    margin: 2% 0;
+.text-profile{
+    color: #0B2543;
+    font-size: 1.8rem;
+    font-weight: 600;
+    margin-left: 3%;
 }
 
 .information-acount{
+    display: flex;
+    align-items: center;
     max-width: 400px;
     min-width: 190px;
     width: 90%;
-    border: 1px solid gray;
+    height: 48px;
     border-radius: 7px;
     background-color: #D0D9F2;
     margin: 0 auto;
     margin-bottom: 5%;
+    border: none;
+    outline: none;
 }
+
+.information-acount--gender{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 6%;
+}
+
+.buttons-gender {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #D0D9F2;
+    max-width: 300px;
+    min-width: 100px;
+    width: 35%;
+    height: 47px;
+    border-radius: 7px;
+}
+
+.adjust-text{
+    font-size: 1.6rem;
+}
+
+.pikachu_res{
+    position: absolute;
+    width: 100px;
+}
+
