--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -98,13 +98,7 @@ main{
     display: none;
     background-color:white;
     width: 300px;
-    height: 360px;
-    
-}
-
-.container-cards--info:hover{
-    box-shadow: 0 1px 12px 0 #242323c0;
-
+    height: 360px;   
 }
 
 .img-target {
@@ -166,10 +160,8 @@ main{
 }
 
 .pokeModalup {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    padding-top: 100px; 
+    display: none;
+    position: absolute; 
     left: 0;
     top: 0;
     width: 100%; 
@@ -227,7 +219,6 @@ main{
         position: absolute;
         top: 5px;
         right: 10px;
-        border: 2px solid black;
     }
     .header-input {
         position: absolute;
@@ -237,7 +228,8 @@ main{
         height: 35px;
     } 
     .container-cards--info{
-        width: 38%;
+        margin: 2%;
+        width: 41%;
     }
 
     .img-target {
