--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -10,29 +10,40 @@ html{
     font-family: 'Lato', sans-serif;
 }
 
-.container-form{
-    width: 100%;
+
+main{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* height: 100vh; */
+}
+
+.container-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
+    width: 100%;
+    margin: auto;
+    margin-top: 10%;
 }
 
 .container-image-profile{
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 20%;
 }
 
 .container-edit-profile{
     display: flex;
-    align-items: center;
     width: 200px;
 }
 
 .title-profile{
     font-size: 2.3rem;
     font-weight: bold;
-    margin: 20px auto;
+    margin: 0 auto 20px;
     color: #424A59;
 }
 
@@ -74,14 +85,20 @@ html{
     margin-left: 147px;
 }
 
+.all-information-container{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 5%;
+}
+
 .container-information--acount{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     max-width: 400px;
     min-width: 226px;
     width: 90%;
-    margin: 10% 0 0 0;
+    margin: 0 auto;
 }
 
 .text-title {
@@ -115,9 +132,8 @@ html{
 
 .information-acount--gender{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    margin: 0 6%;
+    margin-left: 6%;
 }
 
 .buttons-gender {
@@ -130,14 +146,25 @@ html{
     width: 35%;
     height: 47px;
     border-radius: 7px;
+    margin-right: 5%;
 }
 
 .adjust-text{
     font-size: 1.6rem;
 }
 
+.button--edit-profile{
+    display: none;
+    background-color: #D0D9F2;
+    border: none;
+    border-radius: 12px;
+    width: 20%;
+    margin: 0 auto;
+}
+
 @media (max-width: 480px){
-    .container-information--acount {
-        margin: 10% 0;
+
+    .all-information-container{
+        flex-direction: column;
     }
 }
