--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -23,27 +23,28 @@ main{
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
+    max-width: 890px;
     width: 100%;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 4%;
 }
 
 .container-image-profile{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
 }
 
 .container-edit-profile{
     display: flex;
-    width: 200px;
+    width: 181px;
+    margin: 0 auto;
 }
 
 .title-profile{
     font-size: 2.3rem;
     font-weight: bold;
-    margin: 0 auto 20px;
+    margin-bottom: 4%;
     color: #424A59;
 }
 
@@ -52,8 +53,9 @@ main{
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
+    margin-left: 5%;
 }
 
 .container--user_profile{
@@ -62,10 +64,11 @@ main{
     border-radius: 12px;
     overflow: hidden;
     border: 2px solid #D9E0FE;
+    margin: 0 auto;
 }
 
 .user_profile{
-    width: 100%; 
+    width: 100%;
     background-color: #DADFFD;
 }
 
@@ -103,9 +106,18 @@ main{
 
 .text-title {
     color:#424A59;
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 500;
     margin: 0 0 2% 5%;
+}
+
+.text-inf{
+    display: flex;
+    align-items: center;
+    color:#424A59;
+    font-size: 1.7rem;
+    font-weight: 500;
+    margin-left: 3%;
 }
 
 .text-profile{
@@ -121,7 +133,7 @@ main{
     max-width: 400px;
     min-width: 190px;
     width: 90%;
-    height: 48px;
+    height: 45px;
     border-radius: 7px;
     background-color: #D0D9F2;
     margin: 0 auto;
@@ -157,13 +169,33 @@ main{
     display: none;
     background-color: #D0D9F2;
     border: none;
-    border-radius: 12px;
+    border-radius: 20px;
     width: 20%;
-    margin: 0 auto;
+    margin: 15% auto;
+    padding: 2%;
 }
 
-@media (max-width: 480px){
+.button-back{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3%;
+    margin: 10% auto;
+    color: #0B2543;
+    border-radius: 20px;
+    border: none;
+    width: 25%;
+}
 
+.button-back:hover,
+.button-back:focus{
+    color: white;
+    background-color:#D9072D;
+    transition: all 1s ease;
+}
+
+
+@media (max-width: 480px){
     .all-information-container{
         flex-direction: column;
     }
