working user profile

--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -138,6 +138,7 @@ main{
     background-color: #D0D9F2;
     margin: 0 auto;
     margin-bottom: 5%;
+    padding-left: 5%;
     border: none;
     outline: none;
 }
