--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -20,7 +20,7 @@ header {
 .pokemon-logo {
     max-width: 165px;
     min-width: 100px;
-    width: 15%;
+    width: 20%;
     height: auto;
     margin-left: 36px;
 }
@@ -39,7 +39,7 @@ header {
     max-width: 50px;
     min-width: 40px;
     width: 10%;
-    height: auto;
+    height: 40px;
     border-radius: 100%;
     background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
 }
