--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -179,7 +179,7 @@ main{
 
 .pokeModalup {
     display: none;
-    position: absolute; 
+    position: fixed; 
     left: 0;
     top: 0;
     width: 100%; 
