--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -210,6 +210,7 @@ main{
     font-weight: bold;
 }
 .modal--card-text{
+    /* display: flex; */
     font-size: 1.4rem;
     font-weight: 500;
     padding: 4px;
@@ -225,6 +226,13 @@ main{
     color: wheat;
     padding: 2%;
 }
+
+.list_deleted {
+    margin-left: 5%;
+    /* margin-right: 10px; */
+    /* list-style: none; */
+}
+
 
 /* .pokemon--not-found{
     display: none;
