--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -198,22 +198,24 @@ main{
     transition: all 1s ease;
 }
 
-.container-pokebolas{
+.container-pokeball{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap-reverse;
     justify-content: center;
     width: 100%;
     margin-top: 50px;
+    border: none;
 }
 
-.pokeball {
+
+.pokeball{
     width: 100px;
     height: 100px;
-    /* border-radius: 100%; */
-    /* border: 2px solid #D9E0FE; */
-    margin: 2%;
+}
+
+.pokeballs{
+    display: flex;
+    align-items: center;
 }
 
 
