--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -12,7 +12,7 @@ html{
     font-size: 62.5%;
     background-color: #F1F1F1;
     font-family: 'Lato', sans-serif;
-    background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+    /* background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%); */
     /* background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%); */
 }
 
@@ -76,7 +76,7 @@ main{
 
 .user_profile{
     width: 100%;
-    background-color: white;
+    background-color:var(--color_input);
     background-size: cover;
 }
 
@@ -143,7 +143,7 @@ main{
     width: 90%;
     height: 45px;
     border-radius: 7px;
-    background-color: white;
+    background-color: var(--color_input);
     margin: 0 auto;
     margin-bottom: 5%;
     padding-left: 5%;
@@ -161,7 +161,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: var(--color_input);
     max-width: 300px;
     min-width: 100px;
     width: 35%;
