--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -80,7 +80,7 @@ header {
 }
 
 .search-icon{
-    background-image: url("../icons/search.png");
+    background-image: url("../assets/img/search.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -112,10 +112,10 @@ main{
     text-align: left;
     max-width: 260px;
     min-width: 100px;
-    width: 14%;
+    width: 11%;
     height: auto; 
     border-radius: 20px;
-    margin: 1%;
+    margin: 10px;
     background: linear-gradient(to right, rgb(255, 128, 8), rgb(255, 200, 55));  
 }
 
@@ -212,7 +212,7 @@ main{
 }
 .modal--card-text{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
     font-size: 1.4rem;
@@ -266,7 +266,7 @@ main{
 .btn_type {
     font-weight: bold;
     width: 90px;
-    padding: 4px;
+    padding: 3px;
     border-radius: 12px;
     border: none;
     color: white;
@@ -362,10 +362,4 @@ main{
     .img-target {
         margin: 20px auto 50px;
     }   
-}
-
-@media (max-width: 630px) {
-    .modal-content{
-        width: 55%;
-    }
 }
