--- a/proyecto/User-Profile/style_user.css
+++ b/proyecto/User-Profile/style_user.css
@@ -56,7 +56,7 @@ main{
 }
 
 .edit-profile{
-    background-image: url("../icons/edit-profile.svg");
+    background-image: url("../assets/icons/edit-profile.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -85,7 +85,7 @@ main{
 }
 
 .button_profile{
-    background-image: url("../icons/profile_camera.svg");
+    background-image: url("../assets/icons/profile_camera.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
