--- a/proyecto/Cards/style_cards.css
+++ b/proyecto/Cards/style_cards.css
@@ -148,6 +148,19 @@ main{
     text-align: center;
 }
 
+.iconCheck {
+    background-image: url('../assets/icons/icons8-check-mark-50.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 18px;
+    height: 18px;
+    /* border: 1px solid cornsilk; */
+    background-color: cornsilk;
+    border-radius: 50%;
+    margin-left: 8px;
+}
+
 /*MODAL*/
 .close {
     color: white;
@@ -245,6 +258,7 @@ main{
     border: none;
     outline: none;
     font-weight: 600;
+    position: relative;
     background-image: linear-gradient(to right, #D31027 0%, #EA384D  51%, #D31027  100%);
 }
 .btn-grad:hover {
