add some changes

--- a/src/pages/Cards/style_cards.css
+++ b/src/pages/Cards/style_cards.css
@@ -46,6 +46,7 @@ header {
     width: 10%;
     height: 40px;
     border-radius: 100%;
+    object-fit: cover;
     background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%);
 }
 
